--- a/EW/AircraftGuns.cfg
+++ b/EW/AircraftGuns.cfg
@@ -10,7 +10,7 @@
 	@title = M39A1
 	@mass = 0.0809
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The M39 cannon is a 20 mm caliber single-barreled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
+	@description = The Ford M39 cannon is a 20 mm caliber single-barreled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
 	@MODULE[ModuleWeapon] {
 		@shortName = M39A1
 		@roundsPerMinute = 1500
@@ -29,7 +29,7 @@
 	@title = M39A1
 	@mass = 0.0809
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The M39 cannon is a 20 mm caliber single-barreled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
+	@description = The Ford M39 cannon is a 20 mm caliber single-barreled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
 	@MODULE[ModuleWeapon] {
 		@shortName = M39A1
 		@roundsPerMinute = 1500
@@ -68,7 +68,7 @@
 	@title = AN/M3
 	@mass = 0.06
 	@manufacturer = Kerbal Kombat Anthology
-	@description = During World War II, a faster-firing Browning was developed for aircraft use. The AN/M3 increased the rate of fire to around 1,200 rounds per minute, while firing the same round with minimal change in weight or size. The AN/M3 was used in Korea on the P-51D-30, F-82 Twin Mustang, F-86 Sabre, F-84 Thunderjet and F-80 Shooting Star, and in Vietnam in the XM14/SUU-12/A gun pod.
+	@description = During World War II, a faster-firing Browning was developed for aircraft use. The Browning AN/M3 increased the rate of fire to around 1,200 rounds per minute, while firing the same round with minimal change in weight or size. The AN/M3 was used in Korea on the P-51D-30, F-82 Twin Mustang, F-86 Sabre, F-84 Thunderjet and F-80 Shooting Star, and in Vietnam in the XM14/SUU-12/A gun pod.
 	@MODULE[ModuleWeapon] {
 		@shortName = AN/M3
 		@roundsPerMinute = 890
@@ -283,7 +283,7 @@
 	@title = M61A1
 	@mass = 0.112
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The M61A1 is an American machine gun widely used in military aircraft of the USAF.
+	@description = The General Electric M61A1 is an American rotary cannon widely used in military aircraft of the USAF.
 	@MODULE[ModuleWeapon] {
 		@shortName = M61A1
 		@roundsPerMinute = 6000
@@ -301,7 +301,7 @@
 	@title = M61A1
 	@mass = 0.112
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The M61A1 is an American machine gun widely used in military aircraft of the USAF.
+	@description = The General Electric M61A1 is an American rotary cannon widely used in military aircraft of the USAF.
 	@MODULE[ModuleWeapon] {
 		@shortName = M61A1
 		@roundsPerMinute = 6000
