--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -4,7 +4,7 @@
 
 @PART[89Zjq]:NEEDS[SMA] {
 	@title = Type 89 HMG
-	@description = Norinco Type 89 heavy machine gun is designed in the People's Republic of China and fires the Soviet 12.7×108mm ammunition.
+	@description = The Norinco Type 89 Heavy Machinegun is designed in the People's Republic of China and fires the Soviet 12.7×108mm ammunition.
 	@MODULE[ModuleWeapon] {
 		%shortName = QJZ 89
 		@bulletType = 12.7x108mmBullet
