--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -559,8 +559,8 @@
 	}
 }
 @PART[M1SMA]:NEEDS[SMA] {
-	@title = M1A1 Abrams
-	@description = The M1 Abrams is a third-generation American main battle tank designed by Chrysler Defense. M1A1 production started in 1985 and continued to 1992. It featured a new pressurized NBC system, rear bustle rack for improved stowage of supplies and crew belongings, redesigned blow-off panels and M256 120 mm smoothbore cannon.
+	@title = M1A2 Abrams
+	@description = The M1 Abrams is a third-generation American main battle tank designed by Chrysler Defense. Production began in 1986 and entered service in 1992. The M1A2 offers the tank commander an independent thermal sight and ability to, in rapid sequence, shoot at two targets without the need to acquire each one sequentially, also 2nd generation depleted uranium armor components.
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 2
