--- a/EW/Radars.cfg
+++ b/EW/Radars.cfg
@@ -65,7 +65,7 @@
 //50s AI.17
 +PART[bdRadome1inline] {
 	@name = trg_ai17
-	@title = Al.17 Air Interception Radar
+	@title = AI.17 Air Interception Radar
 	@bdacategory = Radars
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
