--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -15,6 +15,9 @@
 @BULLET[20x110mmBullet]:NEEDS[SMA] {
 	@apBulletMod = 0.8
 }
+@BULLET[Sprgr20mmHEFI]:NEEDS[SMA] {
+	@apBulletMod = 0.3
+}
 @BULLET[20x82mmBullet]:NEEDS[SMA] {
 	@apBulletMod = 1
 }
