--- a/EW/Engine45.cfg
+++ b/EW/Engine45.cfg
@@ -625,7 +625,7 @@ key = 1 1 0.5529748 0
 	@title = Rolls-Royce RB.37 Derwent 8
 	@name = eng_rb37derwent8
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from Gloster Meteor F.8. Used in pairs. It was used in its other versions on the Avro 707 and C102, Fairley Delta 1, Fokker S.14, Nord 1601 and Tupolev 73 and 78.
+	@description = Late 50s turbojet engine from Gloster Meteor F.8. Used in pairs. It was used in its other versions on the Avro 707 and C102, Fairley Delta 1, Fokker S.14, Nord 1601 and Tupolev 73 and 78.
 	%rescaleFactor = 0.87376
 	%mass = 0.567
 	
@@ -697,7 +697,7 @@ key = 1 1 0.5529748 0
 	@title = General Electric J47-GE13
 	@name = eng_j47ge13
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the North American F-86 Sabre. It was used in its other versions on the Boeing B-47 Stratojet, KB-50J Superfortress, KC-97 Stratofreighter, North American B-45, FJ-2 Fury, F-86 Sabre and F-86D Sabre dog, Republic XF-91, Martin XB-51, Curtiss XF-87 Blackhawk, Convair NB-36 and B-36 Peacemaker.
+	@description = Late 50s turbojet engine from the North American F-86 Sabre. It was used in its other versions on the Boeing B-47 Stratojet, KB-50J Superfortress, KC-97 Stratofreighter, North American B-45, FJ-2 Fury, F-86 Sabre and F-86D Sabre dog, Republic XF-91, Martin XB-51, Curtiss XF-87 Blackhawk, Convair NB-36 and B-36 Peacemaker.
 
 	%mass = 1.158
 	
@@ -769,7 +769,7 @@ key = 1 1 0.5529748 0
 	@title = General Electric J47-GE-17
 	@name = eng_j47ge17
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the North American F-86D Sabre. It was used in its other versions on the Boeing B-47 Stratojet, KB-50J Superfortress, KC-97 Stratofreighter, North American B-45, FJ-2 Fury, F-86 Sabre and F-86D Sabre dog, Republic XF-91, Martin XB-51, Curtiss XF-87 Blackhawk, Convair NB-36 and B-36 Peacemaker.
+	@description = Late 50s turbojet engine from the North American F-86D Sabre. It was used in its other versions on the Boeing B-47 Stratojet, KB-50J Superfortress, KC-97 Stratofreighter, North American B-45, FJ-2 Fury, F-86 Sabre and F-86D Sabre dog, Republic XF-91, Martin XB-51, Curtiss XF-87 Blackhawk, Convair NB-36 and B-36 Peacemaker.
 	%mass = 1.158
     %rescaleFactor = 0.7464
 	
@@ -921,7 +921,7 @@ key = 1 1 0.5529748 0
 	@title = Klimov VK-1
 	@name = eng_vk1
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the Mikoyan-Gurevich 15. It was used in its other variants on the MiG-17 and Ilyushin Il-28.
+	@description = Late 50s turbojet engine from the Mikoyan-Gurevich 15. It was used in its other variants on the MiG-17 and Ilyushin Il-28.
 	%mass = 0.872
     %rescaleFactor = 1.04
 	
@@ -994,7 +994,7 @@ key = 1.3 1 0 0
 	@title = Klimov VK-1A
 	@name = eng_vk1a
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the Mikoyan-Gurevich 15bis.  It was used in its other variants on the MiG-17 and Ilyushin Il-28.
+	@description = Late 50s turbojet engine from the Mikoyan-Gurevich 15bis.  It was used in its other variants on the MiG-17 and Ilyushin Il-28.
 	%mass = 0.871
     %rescaleFactor = 1.04
 
@@ -1157,7 +1157,7 @@ key = 1 1 0.5529748 0
 	@title = Klimov VK-1F
 	@name = eng_vk1f
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the Mikoyan-Gurevich 17.  It was used in its other variants on the MiG-15 and Ilyushin Il-28.
+	@description = Late 50s turbojet engine from the Mikoyan-Gurevich 17.  It was used in its other variants on the MiG-15 and Ilyushin Il-28.
 	%mass = 0.871
     %rescaleFactor = 1.04
 	
@@ -1307,7 +1307,7 @@ key = 1 1 0.5529748 0
 	@title = Rolls-Royce Avon 207
 	@name = eng_avon207
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the Hawker Hunter. It was used in its other variants on the Supermarine Swift and Scimitar, Vickers Valiant, English Electric Lightning and Canberra, Saab 32 Lansen and Saab 35 Draken, Fairley Delta 2, CAC Sabre, de Havilland Sea Vixen and Ryan X-13.
+	@description = Late 50s turbojet engine from the Hawker Hunter. It was used in its other variants on the Supermarine Swift and Scimitar, Vickers Valiant, English Electric Lightning and Canberra, Saab 32 Lansen and Saab 35 Draken, Fairley Delta 2, CAC Sabre, de Havilland Sea Vixen and Ryan X-13.
 	%mass = 1.31
     %rescaleFactor = 1.048
 	
@@ -1381,7 +1381,7 @@ key = 1 1 0.5529748 0
 	@name = eng_rm5
 	@title = Svenska Flygmotor RM5
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the Saab 32 Lansen. Derivative of the Avon engine used on many planes.
+	@description = Late 50s turbojet engine from the Saab 32 Lansen. Derivative of the Avon engine used on many planes.
 	%mass = 1.31
 	
 	-MODULE[ModuleEnginesFX] {}
@@ -1535,7 +1535,7 @@ key = 1 1 0.5529748 0
 	@name = eng_rb44tay350
 	@title = Rolls-Royce RB.44 Tay 350
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the Dassault M.D454 Mystère IV.
+	@description = Late 50s turbojet engine from the Dassault M.D454 Mystère IV.
 	%mass = 0.935
     %rescaleFactor = 1.016
 	
@@ -1607,7 +1607,7 @@ key = 1 1 0.5529748 0
 	@name = eng_orpheus803
 	@title = Bristol Siddeley Orpheus 803
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Late 50s turbojet egine from the Fiat G-91R. It was used in its other variants on the Fuji T-1, Folland Gnat and other planes.
+	@description = Late 50s turbojet engine from the Fiat G-91R. It was used in its other variants on the Fuji T-1, Folland Gnat and other planes.
 	%mass = 0.379
     %rescaleFactor = 0.6584
 	
