--- a/EW/Engine89.cfg
+++ b/EW/Engine89.cfg
@@ -4183,7 +4183,7 @@ PART {
 	bulkheadProfiles = size1
 	title = General Electrics F414-GE-400
 	manufacturer = Kerbal Kombat Anthology
-	description = Engine used on the Boeing F/A-18E/F Super Hornet. It is used in its variants on the Lockheed Martin X-59, Saab JAS-39E/F Gripen, KAI KF-X, HAL Tejas Mk 2 and EADS Mako.
+	description = Engine used on the Boeing F/A-18E/F Super Hornet. It is used in its variants on the Lockheed Martin X-59, Saab JAS-39E/F Gripen, KAI KF-X, HAL Tejas Mk. 2 and EADS Mako.
 	attachRules = 1,0,1,0,0
 	mass = 1.11
 	skinInternalConductionMult = 4.0
