--- a/EW/Radars.cfg
+++ b/EW/Radars.cfg
@@ -169,7 +169,7 @@
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@mass = 1.2
-	@description = Powerful and heavy air radar, guzzles E/C. Needs 2 engines minimum to function and locks onto fighter sized aircrafts at 21km. It was used in the F-4C.
+	@description = Powerful and heavy air radar, guzzles E/C. Needs 2 engines minimum to function and locks onto fighter sized aircraft at 21km. It was used in the F-4C.
 	
 	@MODULE[ModuleRadar] {
 		radarName = AN/APQ-100 Targeting radar
@@ -273,7 +273,7 @@
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@mass = 0.8
-	@description = Average air radar with 64km of range. Requires 2 engines minimum to function and locks onto fighters at 19km. It was used on various aircrafts such as the Buccaneer and the Electric Lightning.
+	@description = Average air radar with 64km of range. Requires 2 engines minimum to function and locks onto fighters at 19km. It was used on various aircraft such as the Buccaneer and the Electric Lightning.
 
 	
 	@MODULE[ModuleRadar] {
@@ -485,7 +485,7 @@ subcategory = 0
 bulkheadProfiles = srf
 title = 1RL13M P-15 Tropa Surveillance Radar
 manufacturer = Kerbal Kombat Anthology
-description = The 1RL13M/P-15 "Tropa" (Flat Face A) is a small surveillance radar that is suitable for mobile SAM sites. Maximum detection and lock range is 150km.
+description = The NNRIRE 1RL13M/P-15 "Tropa" (Flat Face A) small surveillance radar that is suitable for mobile SAM sites. Maximum detection and lock range is 150km.
 attachRules = 0,1,0,0,1
 
 // --- standard part parameters ---
@@ -730,7 +730,7 @@ subcategory = 0
 bulkheadProfiles = srf
 title = 1S12 P-40 Armour Surveillance Radar
 manufacturer = Kerbal Kombat Anthology
-description = The 1S12 P-40 "Armour" (Long Face) is a mobile radar with great performance. It can lock onto fighters at 39km and bombers at 99km, making them ideal for mobile SAM sites.
+description = The NIIIP 1S12 P-40 "Armour" (Long Face) is a mobile radar with great performance. It can lock onto fighters at 39km and bombers at 99km, making them ideal for mobile SAM sites.
 attachRules = 0,1,0,0,1
 
 // --- standard part parameters ---
@@ -968,7 +968,7 @@ MODULE {
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@rescaleFactor = 2.4
-	@description = The 1RL14 P-12 "Yenisei" (Spoon Rest A) Search Radar is a small VHF search radar that is more effective at closer ranges. Range is limited to 277.8km.
+	@description = The NNRIRE 1RL14 P-12 "Yenisei" (Spoon Rest A) Search Radar is a small VHF search radar that is more effective at closer ranges. Range is limited to 277.8km.
 	
 	@MODULE[ModuleRadar] {
 		radarName = P-12 Search Radar
@@ -1095,7 +1095,7 @@ MODULE {
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@rescaleFactor = 12
-	@description = The 1RL117 P-70 Lena-M was a huge Early Warning Radar with matching performance. Can detect fighter-sized targets at 149km. 
+	@description = The NNIIRT 1RL113M P-70 Lena-M was a huge Early Warning Radar with matching performance. Can detect fighter-sized targets at 149km. 
 	
 	@MODULE[ModuleRadar] {
 		radarName = P-70 Lena-M
