--- a/Missiles/aam_K5.cfg
+++ b/Missiles/aam_K5.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = K-5
 	manufacturer = Kerbal Kombat Anthology
-	description = The Kaliningrad K-5/RS-1U (AA-1) "Alkali" is the premiere Air-to-Air missile of the USSR, guided by a radar beam emmited from the radar, for use exclusively with the RP-2U radar. Primarily a short-range anti-bomber missile. Warranty void if misused with any other radar.
+	description = The Kaliningrad K-5/RS-1U (AA-1) "Alkali" is the premiere Air-to-Air missile of the USSR, guided by a radar beam emitted from the radar, for use exclusively with the RP-2U radar. Primarily a short-range anti-bomber missile. Warranty void if misused with any other radar.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
