--- a/Missiles/agm_Kh22.cfg
+++ b/Missiles/agm_Kh22.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = Kh-22
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raduga Kh-22 (AS-4) "Kitchen" is an Air Launched Anti-Ship missile fielded by the Soviet Union in the 60's. Large, fast, and in an era with not many point defense systems, extremely lethal. Warranty void if used for non-ship killing purposes.
+	description = The Raduga Kh-22 (AS-4) "Kitchen" is an Air Launched Anti-Ship missile fielded by the Soviet Union in the 60's. Large, fast, and in an era with not many point defence systems, extremely lethal. Warranty void if used for non-ship killing purposes.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
