--- a/Missiles/sam_3M8.cfg
+++ b/Missiles/sam_3M8.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = 3M8 Krug
 	manufacturer = Kerbal Kombat Anthology
-	description = The Lyulev Novator 3M8 missile of the 2K11 "Krug" (SA-4) "Ganef" system is a somewhat Short-Ranged SAM developed by the Soviets in the 60's. Perfect for dispatching large targets, for large targets, need a large missile. Warranty void if reffered to as a "thicc boi" in any capacity.
+	description = The Lyulev Novator 3M8 missile of the 2K11 "Krug" (SA-4) "Ganef" system is a somewhat Short-Ranged SAM developed by the Soviets in the 60's. Perfect for dispatching large targets, for large targets, need a large missile. Warranty void if referred to as a "thicc boi" in any capacity.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
