--- a/Missiles/sam_9M317.cfg
+++ b/Missiles/sam_9M317.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = 9M317 Buk
 	manufacturer = Kerbal Kombat Anthology
-	description = The Vympel 9M317 missile of the 9K37M1-2 "Buk-M2" (SA-17) "Grizzly" system was developed as a common missile for the Russian Ground Force's Air Defense Forces (PVO) as well as for ship-based PVO of the Russian Navy. Its exterior design bears a resemblance to the Vympel R-37 air-to-air missile. It can be used to engage aerodynamic, ballistic, above-water and radio contrast targets from both land and sea.
+	description = The Vympel 9M317 missile of the 9K37M1-2 "Buk-M2" (SA-17) "Grizzly" system was developed as a common missile for the Russian Ground Force's Air Defence Forces (PVO) as well as for ship-based PVO of the Russian Navy. Its exterior design bears a resemblance to the Vympel R-37 air-to-air missile. It can be used to engage aerodynamic, ballistic, above-water and radio contrast targets from both land and sea.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
