--- a/Missiles/sam_RIM8.cfg
+++ b/Missiles/sam_RIM8.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = RIM-8A Talos
 	manufacturer = Kerbal Kombat Anthology
-	description = The Bendix RIM-8 "Talos" was a long-range naval surface-to-air missile, and was among the earliest surface-to-air missiles to equip United States Navy ships. The Talos used semiactive radar homing (SARH) for  guidance.
+	description = The Bendix RIM-8 "Talos" was a long-range naval surface-to-air missile, and was among the earliest surface-to-air missiles to equip United States Navy ships. The Talos used semi-active radar homing (SARH) for  guidance.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
