--- a/Turrets/tank_ChieftainMk3.cfg
+++ b/Turrets/tank_ChieftainMk3.cfg
@@ -24,7 +24,7 @@ PART {
 	bulkheadProfiles = srf
 	title = Chieftain Mk.3
 	manufacturer = Kerbal Kombat Anthology
-	description = The FV4201 Chieftain was the main battle tank of the United Kingdom during the 1960s, 1970s and 1980s. A development of the Centurion, the Chieftain introduced the supine (reclining) driver position to British design allowing a heavily sloped hull with reduced height. A new powerpack and improved transmission gave it higher speed than the Centurion despite being heavier due to major upgrades to armour protection and the armament: this allowed it to replace both the Conqueror and Centurion while performing their roles effectively. It remained in service until replaced by the Challenger 1 which shared many of the Chieftain's features.
+	description = The FV4201 Chieftain was the main battle tank of the United Kingdom during the 1960s, 1970s and 1980s. A development of the Centurion, the Chieftain introduced the supine (reclining) driver position to British design allowing a heavily sloped hull with reduced height. A new power-pack and improved transmission gave it higher speed than the Centurion despite being heavier due to major upgrades to armour protection and the armament: this allowed it to replace both the Conqueror and Centurion while performing their roles effectively. It remained in service until replaced by the Challenger 1 which shared many of the Chieftain's features.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
