--- a/Turrets/tank_M551.cfg
+++ b/Turrets/tank_M551.cfg
@@ -24,7 +24,7 @@ PART {
 	bulkheadProfiles = srf
 	title = M551
 	manufacturer = Kerbal Kombat Anthology
-	description = The M551 "Sheridan" AR/AAV (Armored Reconnaissance/Airborne Assault Vehicle) was a light tank developed by the United States. It was designed to be landed by parachute and to swim across rivers. It was armed with the technically advanced but troublesome M81 152mm gun.
+	description = The M551 "Sheridan" AR/AAV (Armoured Reconnaissance/Airborne Assault Vehicle) was a light tank developed by the United States. It was designed to be landed by parachute and to swim across rivers. It was armed with the technically advanced but troublesome M81 152mm gun.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
