--- a/Turrets/tank_PT-76.cfg
+++ b/Turrets/tank_PT-76.cfg
@@ -22,9 +22,9 @@ PART {
 	bdacategory = Gun turrets
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = PT-76
+	title = 2А16 (PT-76)
 	manufacturer = Kerbal Kombat Anthology
-	description = The PT-76 or Object 740B is a Soviet amphibious light tank equipped with 2А16 76 mm D-56TS tank gun introduced in the early 1950s and soon became the standard reconnaissance tank of the Soviet Army and the other Warsaw Pact armed forces. The PT-76 is used in the reconnaissance and fire-support roles. 
+	description = The Object 740B / PT-76 Soviet amphibious light tank turret armed with 76 mm 2А16 / D-56TS / 52-PT-347 tank gun introduced in the early 1950s and soon became the standard reconnaissance tank of the Soviet Army and the other Warsaw Pact armed forces. The PT-76 is used in the reconnaissance and fire-support roles. 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
 
@@ -67,6 +67,7 @@ PART {
 	}
 	MODULE {
 		name = ModuleWeapon
+		shortName = 76mm 2А16
 
 		fireTransformName = fireTransform
 
