--- a/Turrets/tank_T-62.cfg
+++ b/Turrets/tank_T-62.cfg
@@ -22,9 +22,9 @@ PART {
 	bdacategory = Gun turrets
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = T-62
+	title = 2A20 (T-62) Molot
 	manufacturer = Kerbal Kombat Anthology
-	description = The T-62 or Object 166 is a Soviet MBT that was first introduced in 1961. As a further development of the T-55 series, the T-62 retained many similar design elements of its predecessor including low profile and thick turret armour. In contrast with previous tanks, which were armed with rifled tank guns, the T-62 was the first tank armed with a smoothbore tank gun that could fire APFSDS rounds at higher velocities. Although the T-62 was replaced in Russia and the successor states of the Soviet Union, it is still used in some countries and its design features became standardised in subsequent Soviet and Russian mass-produced tanks.
+	description = The OKB-9 Object 166 / T-62 Main Battle Tank turret introduced in 1961 armed with 2A20 / U-5TS "Molot" smooth-bore tank gun. As a further development of the T-55 series, the T-62 retained many similar design elements of its predecessor including low profile and thick turret armour. Its design features became standardised in subsequent Soviet and Russian mass-produced tanks.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
 
@@ -67,6 +67,7 @@ PART {
 	}
 	MODULE {
 		name = ModuleWeapon
+		shortName = 2A20 Molot
 
 		fireTransformName = fireTransform
 
