--- a/EW/AircraftGuns.cfg
+++ b/EW/AircraftGuns.cfg
@@ -10,7 +10,7 @@
 	@title = M39A1
 	@mass = 0.0809
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Ford M39 cannon is a 20 mm caliber single-barreled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
+	@description = The Ford M39 cannon is a 20 mm calibre single-barrelled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
 	@MODULE[ModuleWeapon] {
 		@shortName = M39A1
 		@roundsPerMinute = 1500
@@ -29,7 +29,7 @@
 	@title = M39A1
 	@mass = 0.0809
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Ford M39 cannon is a 20 mm caliber single-barreled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
+	@description = The Ford M39 cannon is a 20 mm calibre single-barrelled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
 	@MODULE[ModuleWeapon] {
 		@shortName = M39A1
 		@roundsPerMinute = 1500
@@ -88,7 +88,7 @@
 	@title = ADEN Mk.4
 	@mass = 0.092
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Royal Small Arms Factory ADEN is a 30 mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.
+	@description = The Royal Small Arms Factory ADEN is a 30mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.
 	@MODULE[ModuleWeapon] {
 		@shortName = ADEN
 		@roundsPerMinute = 1700
@@ -107,7 +107,7 @@
 	@title = ADEN Mk.4
 	@mass = 0.092
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Royal Small Arms Factory ADEN is a 30 mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.
+	@description = The Royal Small Arms Factory ADEN is a 30mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.
 	@MODULE[ModuleWeapon] {
 		@shortName = ADEN
 		@roundsPerMinute = 1700
@@ -127,7 +127,7 @@
 	@title = DEFA 550
 	@mass = 0.085
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30 mm caliber NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.
+	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30mm calibre NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.
 	@MODULE[ModuleWeapon] {
 		@shortName = DEFA
 		@roundsPerMinute = 1700
@@ -146,7 +146,7 @@
 	@title = DEFA 550
 	@mass = 0.085
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30 mm caliber NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.
+	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30mm calibre NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.
 	@MODULE[ModuleWeapon] {
 		@shortName = DEFA
 		@roundsPerMinute = 1700
@@ -166,7 +166,7 @@
 	@title = N-37
 	@mass= 0.103
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman N-37 was a 37 mm aircraft autocannon used by the Soviet Union. The N-37 was a sizable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.
+	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.
 	@MODULE[ModuleWeapon] {	
 		@shortName = N-37
 		@roundsPerMinute = 400
@@ -185,7 +185,7 @@
 	@title = N-37
 	@mass= 0.103
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman N-37 was a 37 mm aircraft autocannon used by the Soviet Union. The N-37 was a sizable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.
+	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.
 	@MODULE[ModuleWeapon] {	
 		@shortName = N-37
 		@roundsPerMinute = 400
@@ -205,7 +205,7 @@
 	@title = NS-23
 	@mass = 0.037
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman-Rikhter NR-23 is a Soviet autocannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
 	@MODULE[ModuleWeapon] {
 		@shortName = NS-23
 		@roundsPerMinute = 850
@@ -224,7 +224,7 @@
 	@title = NS-23
 	@mass = 0.037
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman-Rikhter NS-23 is a Soviet autocannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@description = The Nudelman-Rikhter NS-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-23
 		@roundsPerMinute = 850
@@ -244,7 +244,7 @@
 	@title = NR-30
 	@mass = 0.066
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman-Rikhter NR-23 is a Soviet autocannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-30
 		@roundsPerMinute = 1000
@@ -263,7 +263,7 @@
 	@title = NR-30
 	@mass = 0.066
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman-Rikhter NR-23 is a Soviet autocannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-30
 		@roundsPerMinute = 1000
@@ -321,7 +321,7 @@
 	@title = 9A472 GSh-23L
 	@mass = 0.050
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Gryazev-Shipunov 9A472/GSh-23/TKB-613/AO-9 is a twin-barreled 23 mm autocannon developed in the Soviet Union. It entered service in 1965, replacing the earlier Nudelman-Rikhter NR-23 cannon.
+	@description = The Gryazev-Shipunov 9A472/GSh-23/TKB-613/AO-9 is a twin-barrelled 23 mm auto-cannon developed in the Soviet Union. It entered service in 1965, replacing the earlier Nudelman-Rikhter NR-23 cannon.
 	@MODULE[ModuleWeapon] {
 		@shortName = GSh-23L
 		@roundsPerMinute = 3600
