--- a/EW/Balancing/MM_BDA.cfg
+++ b/EW/Balancing/MM_BDA.cfg
@@ -8,21 +8,21 @@
 }
 @PART[bahaGatlingGun]:NEEDS[SMA]:FOR[KKA] {
     @title = M61A1 Vulcan Turret
-    @description = The General Electric M61A1 is an American rotary cannon widely used in military aircraft of the USAF.
+    @description = The General Electric M61A1 six-barrel, air-cooled, electrically fired Gatling-style rotary cannon widely used in military aircraft of the USAF.
 	@MODULE[ModuleWeapon] {
-		%shortName = M61A1
+		%shortName = 20mm M61A1
 	}
 }
 @PART[bahaABL]:NEEDS[SMA]:FOR[KKA] {
 	@title = YAL-1 ABL
-	@description = The Boeing YAL-1 Airborne Laser weapons system is a megawatt-class chemical oxygen iodine laser primarily designed as a missile defense system to destroy tactical ballistic missiles while in boost phase. The YAL-1 with a low-power laser was test-fired in flight at an airborne target in 2007. A high-energy laser was used to intercept a test target in January 2010.
+	@description = The Boeing YAL-1 Airborne megawatt-class chemical oxygen iodine Laser Weapon System primarily designed as a missile defence system to destroy tactical ballistic missiles while in boost phase. The YAL-1 with a low-power laser was test-fired in flight at an airborne target in 2007. A high-energy laser was used to intercept a test target in January 2010.
 	@MODULE[ModuleWeapon] {
 		%shortName = YAL-1 ABL
 	}
 }
 @PART[bahaAgm86B]:NEEDS[SMA]:FOR[KKA] {
 	@title = AGM-86C ALCM
-	@description = The Boeing AGM-86 ALCM is subsonic air-launched cruise missile developed to increase the effectiveness and survivability of the Boeing B-52H Stratofortress strategic bomber. The missile dilutes an enemy's forces and complicates air defense of its territory. Further development extended its range so much that it emerged as a weapon allowing the B-52s to launch their attacks while still well outside Soviet airspace, saturating their defenses with hundreds of tiny, low-flying targets that were extremely difficult to see on radar.
+	@description = The Boeing AGM-86 ALCM subsonic air-launched cruise missile developed to increase the effectiveness and survivability of the Boeing B-52H Stratofortress strategic bomber. The missile dilutes an enemy's forces and complicates air defence of its territory. Further development extended its range so much that it emerged as a weapon allowing the B-52s to launch their attacks while still well outside Soviet airspace, saturating their defences with hundreds of tiny, low-flying targets that were extremely difficult to see on radar.
 	@MODULE[MissileLauncher] {
 		%shortName = AGM-86C ALCM
 	}
@@ -47,12 +47,12 @@
 @PART[bahaBrowningAnm2]:NEEDS[SMA]:FOR[KKA] {
 	@title = AN/M3 HMG
 	@MODULE[ModuleWeapon] {
-		%shortName = AN/M3 HMG
+		%shortName = 12.7mm AN/M3 HMG
 	}
 }
 @PART[bahaClusterBomb]:NEEDS[SMA]:FOR[KKA] {
 	@title = CBU-103 CEM
-	@description = The Aeruojet General/Honeywell CBU-103 Combined Effects Munition is a cluster bomb used by the United States Air Force introduced in 1986 to replace the earlier cluster bombs used in the Vietnam War. CBU stands for Cluster Bomb Unit and is equipped with BLU-97/B bomblets. When the CBU-87 is used in conjunction with the Wind Corrected Munitions Dispenser guidance tail kit, it becomes much more accurate, and is designated CBU-103.
+	@description = The Aerojet General/Honeywell CBU-103 Combined Effects Munition cluster bomb used by the United States Air Force introduced in 1986 to replace the earlier cluster bombs used in the Vietnam War. CBU stands for Cluster Bomb Unit and is equipped with BLU-97/B bomblets. When the CBU-87 is used in conjunction with the Wind Corrected Munitions Dispenser guidance tail kit, it becomes much more accurate, and is designated CBU-103.
 	@MODULE[MissileLauncher] {
 		%shortName = CBU-103 CEM
 	}
@@ -62,35 +62,35 @@
 }
 @PART[bahaGau-8]:NEEDS[SMA]:FOR[KKA] {
 	@title = GAU-8/A Avenger
-    @description = The General Electric GAU-8/A Avenger is a 30 mm hydraulically driven seven-barrel Gatling-style autocannon that is typically mounted in the A-10 Thunderbolt II. Designed specifically for the anti-tank role,
+    @description = The General Electric GAU-8/A Avenger 30mm hydraulically driven seven-barrel Gatling-style cannon that is typically mounted in the A-10 Thunderbolt II, designed specifically for the anti-tank role,
 	@MODULE[ModuleWeapon] {
-		%shortName = GAU-8/A
+		%shortName = 30mm GAU-8/A
 	}
 }
 @PART[bahaGoalKeeper]:NEEDS[SMA]:FOR[KKA] {
     @title = Goalkeeper
-    @description = The Thales Goalkeeper CIWS introduced in 1979 is an autonomous and completely automatic weapon system for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvering surface vessels. Once activated the system using GAU-8/A automatically undertakes the entire air defence process from surveillance and detection to destruction, including the selection of the next priority target.
+    @description = The Thales Goalkeeper CIWS introduced in 1979 is an autonomous and completely automatic weapon system for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvring surface vessels. Once activated the system using GAU-8/A automatically undertakes the entire air defence process from surveillance and detection to destruction, including the selection of the next priority target.
 	@MODULE[ModuleWeapon] {
-		%shortName = Goalkeeper
+		%shortName = 30mm Goalkeeper
 	}
 }
 @PART[GoalKeeperBDAcMk1]:NEEDS[SMA]:FOR[KKA] {
     @title = Goalkeeper EX-83
-    @description = The Thales Goalkeeper EX-83 Prototype CIWS introduced in 1979 is automatic weapon system using GAU-8/A for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvering surface vessels. The prototype is missing target acquisition radar and so the target information must be fed to it separately.
+    @description = The Thales Goalkeeper EX-83 Prototype CIWS introduced in 1979 is automatic weapon system using GAU-8/A for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvring surface vessels. The prototype is missing target acquisition radar and so the target information must be fed to it separately.
 	@MODULE[ModuleWeapon] {
-		%shortName = Goalkeeper
+		%shortName = 30mm Goalkeeper
 	}
 }
 @PART[BDAcGKmk2]:NEEDS[SMA]:FOR[KKA] {
     @title = Goalkeeper EX-84
-    @description = The Thales Goalkeeper EX-84 Prototype CIWS introduced in 1979 is automatic weapon system using GAU-8/A for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvering surface vessels. The prototype is missing target acquisition radar, but it has a Link 16 to gather data from other crafts as well as IR optical targeting capability.
+    @description = The Thales Goalkeeper EX-84 Prototype CIWS introduced in 1979 is automatic weapon system using GAU-8/A for short-range defence of ships against highly manoeuvrable missiles, aircraft and fast-manoeuvring surface vessels. The prototype is missing target acquisition radar, but it has a Link 16 to gather data from other crafts as well as IR optical targeting capability.
 	@MODULE[ModuleWeapon] {
-		%shortName = Goalkeeper
+		%shortName = 30mm Goalkeeper
 	}
 }
 @PART[bahaHarm]:NEEDS[SMA]:FOR[KKA] {
 	@title = AGM-88 HARM
-	@description = The Texas Instruments AGM-88 High-speed Anti-Radiation Missile is a tactical, air-to-surface anti-radiation missile designed to home in on electronic transmissions coming from surface-to-air radar systems. It was developed as a replacement for the AGM-45 and AGM-78. Production was later taken over by Raytheon Corporation when it purchased the defense production business of Texas Instruments.
+	@description = The Texas Instruments AGM-88 Air-to-Surface High-speed Anti-Radiation Missile designed to home in on electronic transmissions coming from surface-to-air radar systems. It was developed as a replacement for the AGM-45 and AGM-78. Production was later taken over by Raytheon Corporation when it purchased the defence production business of Texas Instruments.
 	@MODULE[MissileLauncher] {
 		%shortName = AGM-88 HARM
 	}
@@ -103,7 +103,7 @@
 }
 @PART[bahaAGM-114]:NEEDS[SMA]:FOR[KKA] {
 	@title = AGM-114 Hellfire
-	@description = The AGM-114 "Hellfire" Air-to-Surface Missile first developed for anti-armor use, but later models were developed for precision drone strikes against other target types, and have been used in a number of actions aimed to "destroy high-value targets". The Hellfire missile is the primary 100-pound (45 kg) class air-to-ground precision weapon for the armed forces of the United States and many other nations.
+	@description = The Lockheed Martin AGM-114 "Hellfire" Air-to-Surface Missile first developed for anti-armour use, but later models were developed for precision drone strikes against other target types, and have been used in a number of actions aimed to "destroy high-value targets". The Hellfire missile is the primary 100-pound (45 kg) class air-to-ground precision weapon for the armed forces of the United States and many other nations.
 	@MODULE[MissileLauncher] {
 		%shortName = AGM-114 Hellfire
 	}
@@ -117,7 +117,7 @@
 }
 @PART[bahaM1Abrams]:NEEDS[SMA]:FOR[KKA] {
 	@title = M1A1 Abrams
-	@description = The M1 Abrams is a third-generation American main battle tank designed by Chrysler Defense. M1A1 production started in 1985 and continued to 1992. It featured a new pressurized NBC system, rear bustle rack for improved stowage of supplies and crew belongings, redesigned blow-off panels and M256 120 mm smoothbore cannon.
+	@description = The General Dynamics M1A1 Abrams third-generation American main battle tank designed by Chrysler Defence. M1A1 production started in 1985 and continued to 1992. It featured a new pressurized NBC system, rear bustle rack for improved stowage of supplies and crew belongings, redesigned blow-off panels and M256 120 mm smooth-bore cannon.
 	@MODULE[ModuleWeapon] {
 		%shortName = 120mm M256
 		@weaponType = ballistic
@@ -134,21 +134,21 @@
 }
 @PART[bahaM102Howitzer]:NEEDS[SMA]:FOR[KKA] {
 	@title = M102
-	@description = The Rock Island Arsenal M102 towable 105mm howitzer is used in air mobile and light infantry operations due to its lightweight aluminum construction.
+	@description = The Rock Island Arsenal M102 towable 105mm howitzer is used in air mobile and light infantry operations due to its lightweight aluminium construction.
 	@MODULE[ModuleWeapon] {
 		%shortName = 105mm M102
 	}
 }
 @PART[bahaM230ChainGun]:NEEDS[SMA]:FOR[KKA] {
 	@title = M230
-	@description = The Hughes M230 Chain Gun is a 30 mm, single-barrel chain-driven autocannon, using external electrical power to cycle the weapon between shots. The M230 Chain Gun is the "Area Weapon System" on the Boeing AH-64 Apache and MH-60L Direct Action Penetrator (DAP). The M230 is mounted on the chin turret. It uses a 1.5 kW electric motor to fire 30 mm linkless ammunition at a rate of 625±25 rounds per minute.
+	@description = The Hughes M230 Chain Gun 30 mm single-barrel chain-driven auto-cannon, using external electrical power to cycle the weapon between shots. The M230 Chain Gun is the "Area Weapon System" on the Boeing AH-64 Apache and MH-60L Direct Action Penetrator (DAP). The M230 is mounted on the chin turret. It uses a 1.5 kW electric motor to fire 30 mm link-less ammunition at a rate of 625±25 rounds per minute.
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm M230
 	}
 }
 @PART[bahaAGM-65]:NEEDS[SMA]:FOR[KKA] {
 	@title = AGM-65 Maverick
-	@description = The Raytheon AGM-46 "Maverick" Air-to-Ground Missile is designed for a close air support against armored targets. It entered service with the United States Air Force in August 1972. Since its introduction into service, numerous Maverick versions had been designed and produced using electro-optical, laser, and imaging infrared guidance systems. The Maverick shares the same configuration as Hughes's AIM-4 Falcon and AIM-54 Phoenix.
+	@description = The Raytheon AGM-46 "Maverick" Air-to-Ground Missile designed for a close air support against armoured targets. It entered service with the United States Air Force in August 1972. Since its introduction into service, numerous Maverick versions had been designed and produced using electro-optical, laser, and imaging infrared guidance systems. The Maverick shares the same configuration as Hughes's AIM-4 Falcon and AIM-54 Phoenix.
 	@MODULE[MissileLauncher] {
 		%shortName = AGM-65 Maverick
 	}
@@ -176,7 +176,7 @@
 }
 @PART[bahaPac-3]:NEEDS[SMA]:FOR[KKA] {
 	@title = MIM-104C Patriot
-	@description = The Raytheon MIM-104C "Patriot" Medium-to-Long Range Surface-to-Air Missile is a part of the PAC-2 Standard upgrade for the Patriot System. This missile is optimized for ballistic missile engagements. Major changes to the PAC-2 missile were the size of the projectiles in its blast-fragmentation warhead and the timing of the fuse, which was optimized for high-speed engagements. PAC-2 reached Army units in 1990, just in time for deployment to the Middle East for the Persian Gulf War. It was there that Patriot was first regarded as a successful ABM system and proof that ballistic missile defense was indeed possible.
+	@description = The Raytheon MIM-104C "Patriot" Medium-to-Long Range Surface-to-Air Missile is a part of the PAC-2 Standard upgrade for the Patriot System. This missile is optimized for ballistic missile engagements. Major changes to the PAC-2 missile were the size of the projectiles in its blast-fragmentation warhead and the timing of the fuse, which was optimized for high-speed engagements. PAC-2 reached Army units in 1990, just in time for deployment to the Middle East for the Persian Gulf War. It was there that Patriot was first regarded as a successful ABM system and proof that ballistic missile defence was indeed possible.
 	@MODULE[MissileLauncher] {
 		%shortName = MIM-104C Patriot
 	}
@@ -187,21 +187,21 @@
 }
 @PART[bahaRBS-15Cruise]:NEEDS[SMA]:FOR[KKA] {
 	@title = RBS-15 Mk. I
-	@description = The SAAB-Bofors RBS-15 long-range FaF Surface-to-Surface Anti-ship Missile. The first weapon contract was signed in 1979; at the last minute the Swedish government did not buy the Harpoon anti-ship missile, opting for an indigenous design. The first missiles were delivered to the Navy and became operational in 1985.
+	@description = The SAAB-Bofors RBS-15 long-range Fire and Forget Surface-to-Surface Anti-ship Missile. The first weapon contract was signed in 1979; at the last minute the Swedish government did not buy the Harpoon anti-ship missile, opting for an indigenous design. The first missiles were delivered to the Navy and became operational in 1985.
 	@MODULE[MissileLauncher] {
 		%shortName = RBS-15 Mk. I
 	}
 }
 @PART[bahaRBS-15ALCruise]:NEEDS[SMA]:FOR[KKA] {
 	@title = RBS-15F
-	@description = The SAAB-Bofors RBS-15 long-range FaF Air-to-Surface Anti-ship Missile. The first weapon contract was signed in 1979; at the last minute the Swedish government did not buy the Harpoon anti-ship missile, opting for an indigenous design. The first missiles were delivered to the Airforce and became operational in 1987.
+	@description = The SAAB-Bofors RBS-15 long-range Fire and Forget Air-to-Surface Anti-ship Missile. The first weapon contract was signed in 1979; at the last minute the Swedish government did not buy the Harpoon anti-ship missile, opting for an indigenous design. The first missiles were delivered to the Air force and became operational in 1987.
 	@MODULE[MissileLauncher] {
 		%shortName = RBS-15 Mk. I
 	}
 }
 @PART[bahaS-8Launcher]:NEEDS[SMA]:FOR[KKA] {
 	@title = B-8 Rocket launcher
-	@description = The OKB-16 B-8 Rocket Launcher is used with the S-8KOM 80-mm unguided aircraft rocket designed to destroy enemy equipment and manpower from the air. The rocket is available with several types of warheads. The carriers of the rocket were Su-17/24/25/27/34/35, MiG-23/27, Mi-8/24/28/35, Ka-50/52 as well as armored personnel carriers and assault boats.
+	@description = The OKB-16 B-8 Rocket Launcher used with the S-8KOM 80-mm unguided aircraft rocket designed to destroy enemy equipment and manpower from the air. The rocket is available with several types of warheads. The carriers of the rocket were Su-17/24/25/27/34/35, MiG-23/27, Mi-8/24/28/35, Ka-50/52 as well as armoured personnel carriers and assault boats.
 }
 -PART[bahaAim9]:NEEDS[SMA]:FOR[KKA] {}
 @PART[BDAsonarPod1A]:NEEDS[SMA]:FOR[KKA] {
