--- a/EW/Balancing/MM_MNWS.cfg
+++ b/EW/Balancing/MM_MNWS.cfg
@@ -9,7 +9,7 @@
 }
 @PART[MK56?Torpedo]:NEEDS[SMA] {
 	@title = Mk. 54 Torpedo
-	@description = The Mark 54 Lightweight Torpedo is a standard 12.75-inch (324 mm) anti-submarine warfare (ASW) torpedo used by the United States Navy.
+	@description = The Raytheon Mark 54 Lightweight 12.75-inch (324 mm) anti-submarine warfare torpedo used by the United States Navy.
 	@MODULE[MissileLauncher] {
 		%shortName = Mk. 54 Torpedo
 	}
@@ -17,49 +17,49 @@
 
 @PART[MK48?Torpedo]:NEEDS[SMA] {
 	@title = Mk. 48 Mod 4 Torpedo
-	@description = The Mark 48 is American heavyweight submarine-launched torpedo. They were designed to sink deep-diving nuclear-powered submarines and high-performance surface ships.
+	@description = The Gould Mark 48 American heavyweight submarine-launched torpedo. They were designed to sink deep-diving nuclear-powered submarines and high-performance surface ships.
 	@MODULE[MissileLauncher] {
 		%shortName = Mk. 48 Mod 4 Torpedo
 	}
 }
 @PART[MK58?Torpedo]:NEEDS[SMA] {
 	@title = Mk. 48 Mod 7 Torpedo
-	@description = The Mark 48 and its improved Advanced Capability (ADCAP) variant are American heavyweight submarine-launched torpedoes. They were designed to sink deep-diving nuclear-powered submarines and high-performance surface ships.
+	@description = The Gould Mark 48 and its improved Advanced Capability (ADCAP) variant are American heavyweight submarine-launched torpedoes. They were designed to sink deep-diving nuclear-powered submarines and high-performance surface ships.
 	@MODULE[MissileLauncher] {
 		%shortName = Mk. 48 Mod 7 Torpedo
 	}
 }
 @PART[X51A]:NEEDS[SMA] {
 	@title = X-51 Waverider
-	@description = The Boeing X-51 "Waverider" is an unmanned scramjet aircraft for hypersonic flight at Mach 5. The aircraft was designated X-51 in 2005. It completed its first powered hypersonic flight on 26 May 2010. After the cruise missile was brought into service as Fast Strike Weapon AGM-183 ARRW (Air-Launched Rapid Response Weapon) Waverider Air-Launched Cruise Missile.
+	@description = The Boeing X-51 "Waverider" unmanned scramjet aircraft for hypersonic Mach 5 flight. The aircraft was designated X-51 in 2005. It completed its first powered hypersonic flight on 26 May 2010. After the cruise missile was brought into service as Fast Strike Weapon AGM-183 ARRW (Air-Launched Rapid Response Weapon) Waverider Air-Launched Cruise Missile.
 	@MODULE[MissileLauncher] {
 		%shortName = AGM-183
 	}
 }
 @PART[LRASM-A]:NEEDS[SMA] {
 	@title = AGM-158C LRASM
-	@description = The DARPA AGM-158C LRASM (Long Range Anti-Ship Missile) is a stealthy anti-ship  air launched cruise missile developed for the United States Air Force and United States Navy. The LRASM was intended to pioneer more sophisticated autonomous targeting capabilities than the U.S. Navy's current Harpoon anti-ship missile, which has been in service since 1977. In February 2014 an urgent capability stop-gap solution was needed to address range and survivability problems with the Harpoon and to prioritize defeating enemy warships, which has been neglected since the end of the Cold War. In August 2015, the missile was officially designated AGM-158C.
+	@description = The DARPA AGM-158C LRASM (Long Range Anti-Ship Missile) stealthy anti-ship air-launched cruise missile developed for the United States Air Force and United States Navy. The LRASM was intended to pioneer more sophisticated autonomous targeting capabilities than the U.S. Navy's current Harpoon anti-ship missile, which has been in service since 1977. In February 2014 an urgent capability stop-gap solution was needed to address range and survivability problems with the Harpoon and to prioritize defeating enemy warships, which has been neglected since the end of the Cold War. In August 2015, the missile was officially designated AGM-158C.
 	@MODULE[MissileLauncher] {
 		%shortName = AGM-158C
 	}
 }
 @PART[LRASM-AS]:NEEDS[SMA] {
 	@title = BGM-158C LRASM	
-	@description = The DARPA BGM-158C LRASM (Long Range Anti-Ship Missile) is a stealthy anti-ship surface launched cruise missile developed for the United States Air Force and United States Navy. The LRASM was intended to pioneer more sophisticated autonomous targeting capabilities than the U.S. Navy's current Harpoon anti-ship missile, which has been in service since 1977. In February 2014 an urgent capability stop-gap solution was needed to address range and survivability problems with the Harpoon and to prioritize defeating enemy warships, which has been neglected since the end of the Cold War. In August 2015, the missile was officially designated BGM-158C.
+	@description = The DARPA BGM-158C LRASM (Long Range Anti-Ship Missile) stealthy anti-ship surface-launched cruise missile developed for the United States Air Force and United States Navy. The LRASM was intended to pioneer more sophisticated autonomous targeting capabilities than the U.S. Navy's current Harpoon anti-ship missile, which has been in service since 1977. In February 2014 an urgent capability stop-gap solution was needed to address range and survivability problems with the Harpoon and to prioritize defeating enemy warships, which has been neglected since the end of the Cold War. In August 2015, the missile was officially designated BGM-158C.
 	@MODULE[MissileLauncher] {
 		%shortName = BGM-158C
 	}
 }
 @PART[LRASM-B]:NEEDS[SMA] {
 	@title = AGM-158D LRASM
-	@description = The DARPA AGM-158D LRASM (Long Range Anti-Ship Missile) is a stealthy anti-ship supersonic air launched cruise missile developed for the United States Air Force and United States Navy. The Navy will hold a competition for the Offensive Anti-Surface Warfare (OASuW)/Increment 2 anti-ship missile as a follow-on to LRASM to enter service in 2024. It is expected the LRASM will compete against the joint Kongsberg/Raytheon offering of the Joint Strike Missile (JSM) for air-launch needs and an upgraded Raytheon Tomahawk cruise missile for surface-launch needs.
+	@description = The DARPA AGM-158D LRASM (Long Range Anti-Ship Missile) stealthy anti-ship supersonic air-launched cruise missile developed for the United States Air Force and United States Navy. The Navy will hold a competition for the Offensive Anti-Surface Warfare (OASuW)/Increment 2 anti-ship missile as a follow-on to LRASM to enter service in 2024. It is expected the LRASM will compete against the joint Kongsberg/Raytheon offering of the Joint Strike Missile (JSM) for air-launch needs and an upgraded Raytheon Tomahawk cruise missile for surface-launch needs.
 	@MODULE[MissileLauncher] {
 		%shortName = AGM-158D
 	}
 }
 @PART[LRASM-BS]:NEEDS[SMA] {
 	@title = BGM-158D LRASM	
-	@description = The DARPA AGM-158D LRASM (Long Range Anti-Ship Missile) is a stealthy anti-ship supersonic surface launched cruise missile developed for the United States Air Force and United States Navy. The Navy will hold a competition for the Offensive Anti-Surface Warfare (OASuW)/Increment 2 anti-ship missile as a follow-on to LRASM to enter service in 2024. It is expected the LRASM will compete against the joint Kongsberg/Raytheon offering of the Joint Strike Missile (JSM) for air-launch needs and an upgraded Raytheon Tomahawk cruise missile for surface-launch needs.
+	@description = The DARPA AGM-158D LRASM (Long Range Anti-Ship Missile) stealthy anti-ship supersonic surface-launched cruise missile developed for the United States Air Force and United States Navy. The Navy will hold a competition for the Offensive Anti-Surface Warfare (OASuW)/Increment 2 anti-ship missile as a follow-on to LRASM to enter service in 2024. It is expected the LRASM will compete against the joint Kongsberg/Raytheon offering of the Joint Strike Missile (JSM) for air-launch needs and an upgraded Raytheon Tomahawk cruise missile for surface-launch needs.
 	@MODULE[MissileLauncher] {
 		%shortName = BGM-158D
 	}
@@ -75,7 +75,7 @@
 // }
 @PART[HHQ16C]:NEEDS[SMA] {
 	@title = HQ-16A Red Banner
-	@description = The China Aerospace Science and Technology Corp (CASC) HQ-16B/LY-80 "Red Flag" Surface-to-Air missile system that China has installed on the Type II Frigate (054A) is believed to be the Chinese derivative of the 3K90 "Uragan" Systems. The Type II Frigate uses a hot-launch vertical launcher similar to the 3S90E.1. The HQ-16 can intercept sea ​​skimmers flying below 10m, and the minimum interception altitude is estimated to be 3-5m. introduced in the Chinese armed forces. Introduced in  2011.
+	@description = The China Aerospace Science and CASC HQ-16B/LY-80 "Red Flag" Surface-to-Air missile system that China has installed on the Type II Frigate (054A) is believed to be the Chinese derivative of the 3K90 "Uragan" Systems. The Type II Frigate uses a hot-launch vertical launcher similar to the 3S90E.1. The HQ-16 can intercept sea ​​skimmers flying below 10m, and the minimum interception altitude is estimated to be 3-5m. introduced in the Chinese armed forces. Introduced in  2011.
 	@MODULE[MissileLauncher] {
 		%shortName = HQ-16A
 	}
@@ -88,8 +88,8 @@
 	}
 }
 @PART[HHQ19RCS]:NEEDS[SMA]:FINAL {
-	@title = HQ-19 Red Banner
-	@description = A vastly upgraded version of HQ-9 to counter ballistic missile and satellites (ASAT) on the lower end of Low Earth orbits, and it is the Chinese equivalent of THAAD. HQ-19 is armed with a dual purpose exosphere kinetic kill vehicle (kkv) warhead, which can be used against ballistic missile warheads or satellites. Its first flight occurred in 2003.
+	@title = SC-19 Red Banner
+	@description = The SC-19 "Red Banner" Anti-Ballistic and Anti-Satellite missile is a vastly upgraded version of HQ-9 to counter ballistic missile and satellites (ASAT) on the lower end of Low Earth orbits, and it is the Chinese equivalent of THAAD. HQ-19 is armed with a dual purpose exosphere kinetic kill vehicle (kkv) warhead, which can be used against ballistic missile warheads or satellites. Its first flight occurred in 2003.
 	
 	@mass = 1.5
 	@maxTemp = 5000
@@ -138,14 +138,14 @@
 
 @PART[LLauncher]:NEEDS[SMA] {
 	@title = M901 Launching Station
-	@description = The M901 Launching Stations are remotely operated, self-contained units. The ECS controls operation of the launchers through each launcher's DLT, via fiber optic or VHF (SINCGARS) data link.
+	@description = The M901 Launching Stations are remotely operated, self-contained units. The ECS controls operation of the launchers through each launcher's DLT, via fibre optic or VHF (SINCGARS) data link.
 }
 @PART[HHQXX]:NEEDS[SMA] {
 	@title = Hongqi-40 Proximity Missile Launcher
-	@description = Advanced Anti-Missie System is built to adapt the future threat with stealth features when placed sideways. Can hold up to 40 missiles.
+	@description = Advanced Anti-Missile System is built to adapt the future threat with stealth features when placed sideways. Can hold up to 40 missiles.
 }
 @PART[3X]:NEEDS[SMA] {
-	@title = Hongqi-9 system multipurpose vehicle.
+	@title = Hongqi-9 system multi-purpose vehicle.
 	-MODULE[BurnTogether]:NEEDS[!BurnTogether] {}
 	@MODULE[ModuleRadar] {
 		@canLock = false
