--- a/EW/Jammers.cfg
+++ b/EW/Jammers.cfg
@@ -197,11 +197,11 @@
 }
 @PART[bahaECMJammer]:NEEDS[SMA]:FINAL {
 	%name = jamm_sps141
-	%title = SPS-141 Siren ECM
+	%title = SPS-141 Lilac ECM
 	%rescaleFactor = 0.8
 	%author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Jammer for breaking enemy radar lock and radar homing missiles with a noise. Used on the An-12, Tu-95K-22, Su-7, Su-17, Yak-28, MiG-23, MiG-25 or MiG-27.
+	@description = The SPS-141 "Lilac" Jammer for breaking enemy radar lock and radar homing missiles with a noise. Used on the An-12, Tu-95K-22, Su-7, Su-17, Yak-28, MiG-23, MiG-25 or MiG-27.
 	bdacategory = Countermeasures
 	!MODULE[ModuleEnviroSensor] {}
 	!MODULE[ModuleScienceExperiment] {}
@@ -222,11 +222,11 @@
 }
 +PART[bahaECMJammer]:NEEDS[!SMA]:FINAL {
 	%name = jamm_sps141
-	%title = SPS-141 Siren ECM
+	%title = SPS-141 Lilac ECM
 	%rescaleFactor = 0.8
 	%author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Jammer for breaking enemy radar lock and radar homing missiles with a noise. Used on the An-12, Tu-95K-22, Su-7, Su-17, Yak-28, MiG-23, MiG-25 or MiG-27.
+	@description = The SPS-141 "Lilac" Jammer for breaking enemy radar lock and radar homing missiles with a noise. Used on the An-12, Tu-95K-22, Su-7, Su-17, Yak-28, MiG-23, MiG-25 or MiG-27.
 	bdacategory = Countermeasures
 	!MODULE[ModuleEnviroSensor] {}
 	!MODULE[ModuleScienceExperiment] {}
