--- a/Missiles/aam_AIM7E.cfg
+++ b/Missiles/aam_AIM7E.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = AIM-7E Sparrow
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raytheon AIM-7E "Sparrow" is a Medium Range Radar Guided missile developed in the early 60's in the USA. An ol' reliable and the not-to distant cousin to the AIM-120. Sparrow and its derivatives is the principal beyond visual range (BVR) air-to-air missile. It remains in service, although it is being phased out in aviation applications in favor of the more advanced AIM-120 AMRAAM.
+	description = The Raytheon AIM-7E "Sparrow" is a Medium Range Radar Guided missile developed in the early 60's in the USA. An ol' reliable and the not-to distant cousin to the AIM-120. Sparrow and its derivatives is the principal beyond visual range (BVR) air-to-air missile. It remains in service, although it is being phased out in aviation applications in favour of the more advanced AIM-120 AMRAAM.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
