--- a/Missiles/aam_R23R.cfg
+++ b/Missiles/aam_R23R.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = R-23R
 	manufacturer = Kerbal Kombat Anthology
-	description = The Vympel R-23R (AA-7) "Apex" is a Soviet Radar Guided Air to Air missile developed in the Mid 70's exclusivly for the MiG-23. Is a medium-range air-to-air missile developed for fighter aircraft. It is comparable to the AIM-7 Sparrow, both in terms of overall performance as well as role. Thankfully, you're able to slap this baby on a lot more things than IRL.
+	description = The Vympel R-23R (AA-7) "Apex" is a Soviet Radar Guided Air to Air missile developed in the Mid 70's exclusively for the MiG-23. Is a medium-range air-to-air missile developed for fighter aircraft. It is comparable to the AIM-7 Sparrow, both in terms of overall performance as well as role. Thankfully, you're able to slap this baby on a lot more things than IRL.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
