--- a/Missiles/agm_KS1.cfg
+++ b/Missiles/agm_KS1.cfg
@@ -29,7 +29,7 @@ PART {
 	bulkheadProfiles = srf
 	title = KS-1 Komet
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raduga KS-1 "Komet" (SA-1) "Kennel" is a Soviet made 50's agm. If it looks familiar to you then you would be right, it's basically a MiG-15 with more explosives and less man. Warranty void if manned.
+	description = The Raduga KS-1 "Komet" (SA-1) "Kennel" is a Soviet made 50's Air-to-Ground. If it looks familiar to you then you would be right, it's basically a MiG-15 with more explosives and less man. Warranty void if manned.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
