--- a/Turrets/tank_T-54.cfg
+++ b/Turrets/tank_T-54.cfg
@@ -22,9 +22,9 @@ PART {
 	bdacategory = Gun turrets
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = T-54
+	title = 52-PT-412 (T-54)
 	manufacturer = Kerbal Kombat Anthology
-	description = The T-54 or Object 137 tanks are a series of Soviet main battle tanks introduced in the years following the Second World War. The first T-54 prototype was completed by the end of 1945. The T-54 eventually became the main tank for armoured units of the Soviet Army, armies of the Warsaw Pact countries, and many others. T-54s and T-55s have been involved in many of the world's armed conflicts since the later part of the 20th century.
+	description = The OKB-9 Object 137Sh / T-54-3 main battle tank turret armed with 52-PT-412 / D-10T 100mm rifled gun introduced in the years following the Second World War. The first T-54 prototype was completed by the end of 1945. The T-54 eventually became the main tank for armoured units of the Soviet Army, armies of the Warsaw Pact countries, and many others. T-54s and T-55s have been involved in many of the world's armed conflicts since the later part of the 20th century.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
 
@@ -67,6 +67,7 @@ PART {
 	}
 	MODULE {
 		name = ModuleWeapon
+		shortName = 100mm 52-PT-412
 
 		fireTransformName = fireTransform
 
